--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../../static/css/main/header.css">
-    <link href="//db.onlinewebfonts.com/c/1c45e28f8e86cc89876f003b953cc3e9?family=SF+Pro+Text" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="/static/css/font/font.css">
+    <link rel="stylesheet" href="../../static/css/font/font.css">
 </head>
 <body>
     <!-- 로그인시 -->
-    <header>
-        <div class="header-layout">
+    <div class="full-screen">
+        <header class="header-layout">
             <div class="header-wrapper">
                 <div class="header-upper-layout">
                     <div class="logo-wrapper">
@@ -54,7 +53,7 @@
                                 </div>
                                 카테고리
                             </div>
-                            <div class="category-wrapper">홈</div>
+                            <div class="category-wrapper category-select">홈</div>
                             <div class="category-wrapper">후원</div>
                             <div class="category-wrapper">펀딩</div>
                             <div class="category-wrapper">커뮤니티</div>
@@ -71,11 +70,11 @@
                     <div class="extended-category-section"></div>
                 </div>
             </div>
-        </div>
-    </header>
+        </header>
+    </div>
     <!-- 로그아웃시 -->
-    <!-- <header>
-        <div class="header-layout">
+    <!-- <div class="full-screen">
+        <header class="header-layout">
             <div class="header-wrapper">
                 <div class="header-upper-layout">
                     <div class="logo-wrapper">
@@ -122,7 +121,7 @@
                     <div class="extended-category-section"></div>
                 </div>
             </div>
-        </div>
-    </header> -->
+        </header>
+    </div> -->
 </body>
 </html>
