--- a/src/main/resources/static/css/main/header.css
+++ b/src/main/resources/static/css/main/header.css
@@ -1,3 +1,16 @@
+.full-screen{
+    font-family: 'SF Pro Text', 'Helvetica Neue', 'Segoe UI', Arial, 'NotoSansKR', sans-serif;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    /* -webkit-box-orient: vertical; */
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-height: 100%;
+    height: 100%;
+}
+
 body {
     margin: 0px;
     padding: 0px;
@@ -308,6 +321,18 @@ svg:not(:root) {
     transition: all 0.2s ease-in-out 0s;
 }
 
+.category-select::after{
+    bottom: 0px;
+    position: absolute;
+    display: flex;
+    content: " ";
+    /* opacity: 0; */
+    width: calc(100% + 6px);
+    height: 2px;
+    background: black;
+    animation: 0.3s ease-in-out 0s 1 normal forwards running eclZLu;
+}
+
 .icon-wrapper{
     overflow: hidden;
     position: relative;
@@ -374,4 +399,37 @@ svg:not(:root) {
     min-width: 48px;
     transform: scale(0.5);
     cursor: pointer;
+}
+
+@media (min-width: 1200px) {
+    .header-upper-layout {
+        max-width: 1160px;
+    }
+
+    .search-bar{
+        max-width: 1160px;
+        padding: 0px;
+    }
+}
+
+@media (min-width: 1080px) {
+    .status-wrapper {
+        margin-right: 0px;
+    }
+
+    .category-section{
+        margin-right: 20px;
+    }
+
+    .search-input-wrapper{
+        margin-right: 0px;
+    }
+}
+
+@media (min-width: 640px) {
+    .extended-category-section {
+        width: calc(100% + 40px);
+    }
+
+
 }
