--- a/src/main/resources/templates/main/footer.html
+++ b/src/main/resources/templates/main/footer.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="../../static/css/main/footer.css">
 </head>
 <body>
-    <footer>
-        <div class="footer-wrapper">
+    <div class="full-screen">
+        <footer class="footer-wrapper">
             <div class="footer-link-wrapper">
                 <div class="footer-site-map-wrapper">
                     <div class="footer-site-map">
@@ -162,7 +162,7 @@
                     텀블벅은 플랫폼 제공자로서 프로젝트의 당사자가 아니며, 직접적인 통신판매를 진행하지 않습니다. 프로젝트의 완수 및 선물제공의 책임은 해당 프로젝트의 창작자에게 있으며, 프로젝트와 관련하여 후원자와 발생하는 법적 분쟁에 대한 책임은 해당 창작자가 부담합니다.
                 </div>
             </div> -->
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 </html>
