공지사항 목록 일단 완성

--- a/src/main/resources/templates/customerCetner/notice.html
+++ b/src/main/resources/templates/customerCetner/notice.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>공지사항 | 텀블벅 - 크리에이터를 위한 크라우드펀딩</title>
-    <link rel="stylesheet" href="/src/main/resources/static/css/main/header.css">
-    <link rel="stylesheet" href="/src/main/resources/static/css/customerCenter/notice.css">
+    <link rel="stylesheet" href="/static/css/main/header.css">
+    <link rel="stylesheet" href="/static/css/customerCenter/notice.css">
+    <link rel="stylesheet" href="/static/css/font/font.css">
+
 </head>
 <body>
     <!-- 헤더  -->
@@ -22,7 +24,7 @@
                         <span class="notice-text common">공지사항</span>
                     </div>
                 </div>
-    <!-- 리스트 -->     
+                <!-- 리스트 -->     
                 <div class="notice-list-container list-hei wid list-con notice-title">
                     <div class="notice-list-wrapper">
                         <ul class="list-ul">
@@ -34,7 +36,7 @@
                                         <span class="list-date">2023-04-13</span>
                                     </span>
                                     <div class="list-img">
-                                        <img src="https://tumblbug-assets.imgix.net/notices/cover_images/000/000/378/original/tbb_logo_1240_(1)_(1).png?w=620" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
+                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
                                     </div>
                                 </a>
                             </li>
@@ -46,7 +48,7 @@
                                         <span class="list-date">2023-04-13</span>
                                     </span>
                                     <div class="list-img">
-                                        <img src="https://tumblbug-assets.imgix.net/notices/cover_images/000/000/378/original/tbb_logo_1240_(1)_(1).png?w=620" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
+                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
                                     </div>
                                 </a>
                             </li>
@@ -58,7 +60,7 @@
                                         <span class="list-date">2023-04-13</span>
                                     </span>
                                     <div class="list-img">
-                                        <img src="https://tumblbug-assets.imgix.net/notices/cover_images/000/000/378/original/tbb_logo_1240_(1)_(1).png?w=620" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
+                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
                                     </div>
                                 </a>
                             </li>
@@ -70,7 +72,7 @@
                                         <span class="list-date">2023-04-13</span>
                                     </span>
                                     <div class="list-img">
-                                        <img src="https://tumblbug-assets.imgix.net/notices/cover_images/000/000/378/original/tbb_logo_1240_(1)_(1).png?w=620" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
+                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
                                     </div>
                                 </a>
                             </li>
@@ -82,7 +84,7 @@
                                         <span class="list-date">2023-04-13</span>
                                     </span>
                                     <div class="list-img">
-                                        <img src="https://tumblbug-assets.imgix.net/notices/cover_images/000/000/378/original/tbb_logo_1240_(1)_(1).png?w=620" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
+                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
                                     </div>
                                 </a>
                             </li>
@@ -94,7 +96,7 @@
                                         <span class="list-date">2023-04-13</span>
                                     </span>
                                     <div class="list-img">
-                                        <img src="https://tumblbug-assets.imgix.net/notices/cover_images/000/000/378/original/tbb_logo_1240_(1)_(1).png?w=620" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
+                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
                                     </div>
                                 </a>
                             </li>
@@ -106,24 +108,82 @@
                                         <span class="list-date">2023-04-13</span>
                                     </span>
                                     <div class="list-img">
-                                        <img src="https://tumblbug-assets.imgix.net/notices/cover_images/000/000/378/original/tbb_logo_1240_(1)_(1).png?w=620" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
+                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
                                     </div>
                                 </a>
                             </li>
                         </ul>
                     </div>
                 </div>
+                    <!-- 페이징 -->
+                    <div class="paging-wrapper">
+                        <ul class="paging-wrap">
+                            <li class="paging-prev-wrap" title="이전 페이지">
+                                <div class="prev">
+                                    <svg viewBox="0 0 48 48">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M32.8912 45.3014L12 23.913L32.8912 2.52471C33.5866 1.8251 34.7804 1.8251 35.4777 2.52471C36.1741 3.22333 36.1741 4.42368 35.4777 5.22224L17.1731 23.913L35.4777 42.7018C36.1741 43.4024 36.1741 44.6018 35.4777 45.4013C35.0788 45.8011 34.6819 46 34.1845 46C33.7855 45.9011 33.2881 45.7002 32.8912 45.3014Z"></path>
+                                    </svg>
+                                </div>
+                            </li>
+                            <li title="1" class="paging-item" tabindex="0">
+                                <a rel="nofollow">1</a>
+                            </li>
+                            <li title="2" class="paging-item" tabindex="0">
+                                <a rel="nofollow">2</a>
+                            </li>
+                            <li title="3" class="paging-item" tabindex="0">
+                                <a rel="nofollow">3</a>
+                            </li>
+                            <li title="4" class="paging-item" tabindex="0">
+                                <a rel="nofollow">4</a>
+                            </li>
+                            <li title="5" class="paging-item" tabindex="0">
+                                <a rel="nofollow">5</a>
+                            </li>
+
+                            <li title="다음 페이지" tabindex="0" class="paging-next" aria-disabled="false">
+                                <div  class="next">
+                                    <svg viewBox="0 0 48 48">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M13.9071 46C13.4118 46 12.9164 45.8001 12.6192 45.4003C11.9257 44.7007 11.9257 43.5014 12.6192 42.7019L30.8493 24.0125L12.5201 5.22317C11.8266 4.52357 11.8266 3.32425 12.5201 2.5247C13.2136 1.8251 14.3034 1.8251 15.096 2.5247L36 24.0125L15.195 45.4003C14.7988 45.8001 14.3034 46 13.9071 46Z"></path></svg></div>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- search -->
+                    <div class="search-container">
+                        <div class="search-wrapper">
+                            <span class="search-wrap search-span">
+                                <input type="text" class="search-text" placeholder="검색어를 입력해주세요" autocomplete="off">
+                                    <button class="search-btn-container search-btn-wrapper" style="color: white;">
+                                        <div class="search-btn-wrap">
+                                            <div class="search-btn" name="">
+                                                <svg viewBox="0 0 48 48">
+                                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M21.8113 37.22C13.3064 37.22 6.4025 30.3161 6.4025 21.8113C6.4025 13.3064 13.3064 6.4025 21.8113 6.4025C30.3161 6.4025 37.22 13.3064 37.22 21.8113C37.22 30.3161 30.3161 37.22 21.8113 37.22ZM45.3246 42.2229L37.22 34.1172C44.0239 25.6124 42.6231 13.1063 34.1182 6.4025C30.9174 3.70097 26.714 2.20011 22.5117 2H21.8113H21.1109C10.805 2.40023 2.40023 10.7049 2 21.0108V21.7112V22.3115C2.30017 33.2177 11.4053 41.8226 22.3115 41.5225C26.614 41.4224 30.7163 39.9215 34.1182 37.22L42.2229 45.3246C43.1234 46.2251 44.4251 46.2251 45.3246 45.3246C46.2251 44.5242 46.2251 43.1224 45.3246 42.2229Z"></path>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </button>
+                            </span>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    
+        
+        <!-- footer -->
+        <footer></footer>
     </div>
 </body>
 <script>
 /* 외부 html 파일 불러오기 */
 const header = document.querySelector('header');
+const footer = document.querySelector('footer');
 
-fetch('/src/main/resources/templates/main/header.html')
+fetch('/templates/main/header.html')
 .then(res => res.text())
 .then(data => header.innerHTML = data);
+
+fetch('/templates/main/footer.html')
+.then(res => res.text())
+.then(data => footer.innerHTML = data);
 </script>    
 </html>
