--- a/src/main/resources/templates/community/service-board.html
+++ b/src/main/resources/templates/community/service-board.html
@@ -6,17 +6,141 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>심봉사 | 봉사 모집 게시판</title>
     <link rel="stylesheet" href="../../static/css/community/service-board.css">
-    <link rel="stylesheet" href="/static/css/font/font.css">
+    <link rel="stylesheet" href="../../static/css/font/font.css">
 </head>
 <body>
     <!-- 헤더 -->
 
     <!-- 전체 div -->
-    <div style="background-color: #fff;">
+    <div class="benner-container">
         <!-- 배너 -->
-        <div></div>
+        <div class="board-benner">
+            <div class="benner-cover">
+                <img src="https://media.rocketpunch.com/company/395/tumblbug_cover_1650001824.png" alt="">
+            </div>
+            <div class="benner-content"></div>
+        </div>
         <!-- 중간 메인 -->
-        <div></div>
+        <div>
+            <div class="main-container">
+                <section class="row">
+                    <div class="row-container">
+                        <h1 class="row-text">심봉사와 함께 봉사할 심청을 찾습니다.</h1>
+                    </div>
+                </section>
+                <section class="service-info">
+                    <h4 class="service-header">
+                        <a href="#" class="service-header-text">진행 중인 봉사 정보</a>
+                    </h4>
+                    <!--  -->
+                    <div class="service-items">
+                        <div class="service-items-wrapper">
+                            <div class="service-items-content">
+                                <div class="name">심봉사(SimBongSa)</div>
+                                <div class="title">서울시 환경정화 봉사자 모집</div>
+                                <div class="dates">
+                                    <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
+                                </div>
+                                <div class="service-dates">
+                                    <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
+                                </div>
+                            </div>
+                            <div class="items-buttons">
+                                <form class="gather">
+                                    <a class="gather-button">모집중</a>
+                                </form>
+                                <a class="button">지원</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service-items">
+                        <div class="service-items-wrapper">
+                            <div class="service-items-content">
+                                <div class="name">심봉사(SimBongSa)</div>
+                                <div class="title">서울시 환경정화 봉사자 모집</div>
+                                <div class="dates">
+                                    <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
+                                </div>
+                                <div class="service-dates">
+                                    <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
+                                </div>
+                            </div>
+                            <div class="items-buttons">
+                                <form class="gather">
+                                    <a class="gather-button">모집중</a>
+                                </form>
+                                <a class="button">지원</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service-items">
+                        <div class="service-items-wrapper">
+                            <div class="service-items-content">
+                                <div class="name">심봉사(SimBongSa)</div>
+                                <div class="title">서울시 환경정화 봉사자 모집</div>
+                                <div class="dates">
+                                    <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
+                                </div>
+                                <div class="service-dates">
+                                    <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
+                                </div>
+                            </div>
+                            <div class="items-buttons">
+                                <form class="gather">
+                                    <a class="gather-button">모집중</a>
+                                </form>
+                                <a class="button">지원</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service-items">
+                        <div class="service-items-wrapper">
+                            <div class="service-items-content">
+                                <div class="name">심봉사(SimBongSa)</div>
+                                <div class="title">서울시 환경정화 봉사자 모집</div>
+                                <div class="dates">
+                                    <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
+                                </div>
+                                <div class="service-dates">
+                                    <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
+                                </div>
+                            </div>
+                            <div class="items-buttons">
+                                <form class="gather">
+                                    <a class="gather-button">모집중</a>
+                                </form>
+                                <a class="button">지원</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service-items">
+                        <div class="service-items-wrapper">
+                            <div class="service-items-content">
+                                <div class="name">심봉사(SimBongSa)</div>
+                                <div class="title">서울시 환경정화 봉사자 모집</div>
+                                <div class="dates">
+                                    <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
+                                </div>
+                                <div class="service-dates">
+                                    <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
+                                </div>
+                            </div>
+                            <div class="items-buttons">
+                                <form class="gather">
+                                    <a class="gather-button">모집중</a>
+                                </form>
+                                <a class="button">지원</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!--  -->
+                </section>
+            </div>
+            <div class="service-help">
+                <p>마지막 정보 수정 : 2023-04-19</p>
+                <p style="line-height: 1.5em;">심봉사 관리자의 도움이 필요할 땐 여기서 문의해주세요</p>
+            </div>
+        </div>
     </div>
     <!-- 푸터 -->
 </body>
