--- a/src/main/resources/templates/community/review-detail.html
+++ b/src/main/resources/templates/community/review-detail.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>심봉사 | 활동 후기 상세페이지</title>
-    <link rel="stylesheet" href="/static/css/font/font.css">
+    <link rel="stylesheet" href="../../static/css/font/font.css">
     <link rel="stylesheet" href="../../static/css/community/review-detail.css">
 </head>
 <body>
