--- a/src/main/resources/templates/main/footer.html
+++ b/src/main/resources/templates/main/footer.html
@@ -17,6 +17,9 @@
                         <div class="footer-link-column" style="min-width:160px">
                             <div class="footer-link-site-map-title">심봉사</div>
                             <a href="#" class="link-site-map" target="_blank">
+                                <span class="site-map-text">공지사항</span>
+                            </a>
+                            <a href="#" class="link-site-map" target="_blank">
                                 <span class="site-map-text">서비스 소개</span>
                             </a>
                             <a href="#" class="link-site-map" target="_blank">
