--- a/src/main/resources/static/css/main/main.css
+++ b/src/main/resources/static/css/main/main.css
@@ -205,6 +205,7 @@ b, strong {
     max-width: 100%;
     width: 766px;
     transition-property: transform;
+    background-size: cover;
 }
 
 .swiper-controll-wrapper{
